fix: fixed the text break in payment and added return to home in dashboard

--- a/src/static/css/payment.css
+++ b/src/static/css/payment.css
@@ -228,7 +228,7 @@ label{
 }
 
 
-@media (max-width: 950px) and (min-width: 577px){
+@media (max-width: 1100px) and (min-width: 577px){
 
   .form-container{
     width: 100%;
@@ -339,4 +339,11 @@ label{
     height: 200px;
   }
 
+}
+
+@media (min-width: 300px) and (max-width: 450px){
+  .response-container p{
+    font-size: .5em;
+    margin-left: -30px;
+  }
 }
